#1109 Fixes WCAG color contrast student and admin colors.

--- a/devilry/devilry_theme3/staticsources/devilry_theme3/styles/cradmin_theme_devilry_common/devilry_branding_variables.less
+++ b/devilry/devilry_theme3/staticsources/devilry_theme3/styles/cradmin_theme_devilry_common/devilry_branding_variables.less
@@ -5,7 +5,7 @@
 @devilry-brand-border-width: 3px;
 
 
-@devilry-brand-color-success: #61AE24;
+@devilry-brand-color-success: #589D20;
 @devilry-brand-color-success-dark: shade(@devilry-brand-color-success, 7%);
 @devilry-brand-color-success-light1: tint(@devilry-brand-color-success, 7%);
 @devilry-brand-color-success-light2: tint(@devilry-brand-color-success, 15%);
@@ -36,7 +36,7 @@
 @devilry-brand-muted-color: @devilry-brand-color-default-light1;
 
 
-@devilry-brand-color-admin: shade(#F18D05, 5%);
+@devilry-brand-color-admin: shade(#F18D05, 13%);
 @devilry-brand-color-admin-dark: shade(@devilry-brand-color-admin, 18%);
 @devilry-brand-color-admin-light1: tint(@devilry-brand-color-admin, 7%);
 @devilry-brand-color-admin-light2: tint(@devilry-brand-color-admin, 15%);
@@ -51,7 +51,7 @@
 @devilry-brand-color-examiner-light3: tint(@devilry-brand-color-examiner, 60%);
 @devilry-brand-color-examiner-light4: #fff;
 
-@devilry-brand-color-student: #61AE24;
+@devilry-brand-color-student: #589D20;
 @devilry-brand-color-student-dark: shade(@devilry-brand-color-student, 18%);
 @devilry-brand-color-student-light1: tint(@devilry-brand-color-student, 7%);
 @devilry-brand-color-student-light2: tint(@devilry-brand-color-student, 15%);
